syntax = "proto3";
package tcp_msg; 

message ProtoPackage
{
    string      type_name = 1;  // 在.proto文件中定义的message 的typename名称（通过getTypeName()获取），需要带package的完整限定名
    bytes       data = 2;  //由name指定的序列化数据
}


